Fix spacing in controls

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -7,6 +7,7 @@
 
 body {
   margin: 0;
+  font-family: sans-serif;
 
   &.cursor-progress * {
     cursor: progress;
@@ -72,7 +73,7 @@ table {
       }
 
       th {
-        font-size: 0;
+        font-size: 0 !important;
         height: 0;
         padding: 0;
         border: none !important;
