--- a/sass/layouts.scss
+++ b/sass/layouts.scss
@@ -23,6 +23,10 @@
   @extend .stack-layout;
   flex-direction: column;
   align-items: stretch;
+
+  > .fill-parent {
+    flex-grow: 1;
+  }
 }
 
 .absolute-layout {
