--- a/sass/macosx/sidebar.scss
+++ b/sass/macosx/sidebar.scss
@@ -39,6 +39,7 @@
         margin-right: 6px;
         color: #808080;
         fill: #808080;
+        vertical-align: middle;
       }
     }
   }
