--- a/sass/windows10/buttons.scss
+++ b/sass/windows10/buttons.scss
@@ -22,8 +22,8 @@
       display: inline-block;
       fill: #000100;
       color: #000100;
-      width: 20px;
-      height: 20px;
+      width: 24px;
+      height: 24px;
     }
   }
 
